updated readme yup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: earth_walker
-description: A Flutter application for exploring maps, unlocking achievements, and awarding medals.
+description: A Flutter application for exploring maps in real life, unlocking achievements, and awarding medals.
 
 version: 1.0.0+1
 
